Update README for production setup and refine dependencies
Added detailed instructions for production deployment in README, covering WSGI server usage, security, and database recommendations. Updated requirements.txt with optional production dependencies for clarity.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,9 @@ Flask-SQLAlchemy==3.1.1
 PyMySQL==1.1.0
 python-dotenv==1.0.0
 cryptography==41.0.3
+
+# Optional production dependencies
+# Uncomment as needed
+# gunicorn==21.2.0
+# uwsgi==2.0.22
 gunicorn
